This file contains a detailed explanation of the changes between individual
versions of XINS.

$Id$

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 1.1.0 ALPHA 6:

* Logdoc:
  - Fixed en_US translation of log 3210, 3216, 3223, 3412, 3419 and 3424 to
    include the reason.

* XINS/Java Common:
  - The diagnotic context identifier should be removed after being poped
    otherwise the thread stays in memory.
  - Reset some variables after the HTTP call, so that the variables can be
    garbage collected.

* XINS/Java Client Framework:
  - Sending down _convention=_xins-std with each call.

* XINS/Java Server Framework:
  - Applied a lot of small improvements to the APIServlet class in terms of
    documentation, exception handling, logging, etc.

* Libraries:
  - Updated xmlenc from 0.45 to 0.46.

* Generation of server-side Java code:
  - Fixed the parameter name set in the web.xml file used for the calling
    convention to the correct value.

* Generated test forms:
  - Sending down _convention=_xins-std with each call.

* Generated specification documentation:
  - Sending down _convention=_xins-std with calls to _GetVersion,
    _GetStatistics and _GetSettings.

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 1.1.0 ALPHA 5:

* XINS/Java Common Library:
  - Changed some classes to throw a ProgrammingError instead of an Error, if
    appropriate.
  - Extended tests in ServiceCaller class to make sure the implementation is
    implementing the correct methods.
  - Fixed SF.net bug #1079069. The first line of the class description was:
    "Abstractgion of a manageanble object". Fixed those 2 typos.
  - Moved some unit tests for org.xins.common packages from
    org.xins.tests.common.util to org.xins.tests.common.
  - Extended test set for class TargetDescriptor.
  - Changed pattern: removed obsolete escapes; changed 0-9 range into \d;